--- a/mystyle.css
+++ b/mystyle.css
@@ -65,7 +65,12 @@ width: 100%;
 height: 100%;
 /*Necesario para que ocupe el 100% del div que lo contiene*/
 text-decoration: none;
+padding-left:12px;
+padding-right:12px;
+}
+.divNav{
 padding:0 !important;
+border:1px solid white;
 }
 .a-norma{
 text-decoration: underline;
